--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -9,7 +9,16 @@
 		"description": "{{appDescription}}",
 		"applicationVersion": {
 			"version": "1.0.0"
-		}
+		},
+		"dataSources" : {
+            "default" : {
+                "uri" : "http://35.161.26.88:10000/",
+                "type" : "OData",
+                "settings" : {
+                    "odataVersion" : "4.0"
+                }
+            }
+        }		
 	},
 	"sap.ui": {
 		"_version": "1.1.0",
@@ -38,6 +47,13 @@
 				"settings": {
 					"bundleName": "sap.ui.odataapp.i18n.i18n"
 				}
+			},
+			"": {
+                "dataSource" : "default",
+                "settings" : {
+                    "synchronizationMode" : "None",
+                    "updateGroupId" : "myAppUpdateGroup"
+                }
 			}
 		},
 		"resources": {
