--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -12,7 +12,7 @@
 		},
 		"dataSources" : {
             "default" : {
-                "uri" : "http://35.161.26.88:10000/",
+                "uri" : "https://35.161.26.88/",
                 "type" : "OData",
                 "settings" : {
                     "odataVersion" : "4.0"
@@ -52,7 +52,8 @@
                 "dataSource" : "default",
                 "settings" : {
                     "synchronizationMode" : "None",
-                    "updateGroupId" : "myAppUpdateGroup"
+                    "updateGroupId" : "myAppUpdateGroup",
+                    "groupId" : "$direct"
                 }
 			}
 		},
