--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ fioriHtmlRunner.html
 mock_preview_sapui5.html
 .*/mock_preview_sapui5.html
 /.user.project.json
+/webapp/sap-ui-cachebuster-info.json
+web.config
