--- a/web.config
+++ b/web.config
@@ -4,5 +4,13 @@
         <staticContent>
             <mimeMap fileExtension=".properties" mimeType="application/octet-stream" />
         </staticContent>
+        <rewrite>
+            <rules>
+                <rule name="Redirecting for Cache Buster UI5">
+                    <match url="^webapp\/~\d{14}~(.*)" />
+                    <action type="Rewrite" url="webapp{R:1}" />
+                </rule>
+            </rules>
+        </rewrite>
     </system.webServer>
 </configuration>
